ci: regenerated with OpenAPI Doc 0.1.1, Speakeay CLI 1.5.3