@@ -9,6 +9,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import org.apache.http.NameValuePair;
 
@@ -51,7 +52,7 @@ public final class Utils {
 
                                 pathParams.put(pathParamsMetadata.name,
                                         String.join(",",
-                                                Arrays.asList(array).stream().map(v -> Utils.valToString(v)).toList()));
+                                                Arrays.asList(array).stream().map(v -> Utils.valToString(v)).collect(Collectors.toList())));
                                 break;
                             case MAP:
                                 Map<?, ?> map = (Map<?, ?>) value;
@@ -68,7 +69,7 @@ public final class Utils {
                                                 return String.format("%s,%s", Utils.valToString(e.getKey()),
                                                         Utils.valToString(e.getValue()));
                                             }
-                                        }).toList()));
+                                        }).collect(Collectors.toList())));
                                 break;
                             case OBJECT:
                                 List<String> values = new ArrayList<String>();
